packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.expected
packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.lev:33:1: error: expected expression
  var l = Probe::wrap("left", (Left a) => a);
  ^~~
packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.lev:33:5: error: expected ';'
  var l = Probe::wrap("left", (Left a) => a);
      ^
packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.lev:33:1: error: unknown name ''
  var l = Probe::wrap("left", (Left a) => a);
  ^~~
packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.lev:33:5: error: unknown name 'l'
  var l = Probe::wrap("left", (Left a) => a);
      ^
packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.lev:33:9: error: cannot determine a concrete type tuple for generic 'wrap' at this call site
  var l = Probe::wrap("left", (Left a) => a);
          ^~~~~
packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.lev:34:17: error: unknown function 'l'
  console.writeln(l());
                  ^

6 error(s)
