packages/atlantis/tests/probes/mcp_p1_generic_labeled_ctor_type_param.lev
// T7-P1: the exact shape §3.3's makeTool<A,R> needs -- a generic function
// whose ONLY evidence for type param A is a `(A) => R` lambda-LITERAL
// argument (no plain witness value of type A anywhere in the call), and
// whose body calls a static-shaped labeled ctor `A::___()` (LA-18,
// designs/complete/techdesign-generic-static-members.md, landed 2026-07-12).
//
// Expected (probed against this tree): FAIL -- "cannot determine a concrete
// type tuple for generic 'wrap' at this call site". LA-18's specialization
// tuple-collector (§4.1's `inferConstruction`/`genericReturn` reuse) does not
// pick up the type from a lambda-parameter's declared type, even though
// ordinary (non-`::`) generic checking infers A/R from that same lambda just
// fine (confirmed: deleting the `A::Zero()` call below makes this compile).
// A plain VALUE argument of type A (a witness) DOES let the collector
// succeed (confirmed in a companion scratch repro, not checked in) -- so the
// gap is specifically "tuple evidence from a lambda-typed argument alone."
// Per §10 STOP conditions this is filed (known_bugs, LA-18 follow-up) and
// the design's own §3.5 fallback ladder rung 3 is implemented instead of
// hacking around it: the `@Tool` rule generates metadata only; typed
// dispatch adapters are hand-written in the composition root.
namespace Probe {
    () => string wrap<A, R>(string tag, (A) => R fn) {
        string eager = A::Zero().tag();
        return () => tag + ":" + eager;
    }
}
uses Probe;

class Left {
    new Zero() { }
    string tag() => "L";
}

var l = Probe::wrap("left", (Left a) => a);
console.writeln(l());
